sorry, limited time resources... couldn´t finish a

--- a/03-CSS/gamebox.html
+++ b/03-CSS/gamebox.html
@@ -25,7 +25,7 @@
                 <div id="left" class="d-pad left">^</div>
             </nav>
             <nav class="skin-change">
-                <div class="previous"><</div>
+                <div class="previous"></div>
                 <div class="next">></div>
             </nav>
             <div class="accent"></div>
